src/pages/homePage/components/contactBanner/_contactMeBanner.scss
@use "../../../../../public/variables" as v;
@use "sass:math";
$namespace: "contact-me-banner";
$unitless-size: 5.2;
$font-size: calc(min(#{$unitless-size}vw, 5.5em));

##{$namespace} {
  display: flex;
  width: 100%;
  justify-content: space-between;
  background-color: v.$dark-black;
  min-height: 100vh;
}
##{$namespace}-profile {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 50%;
  height: 100%;
  min-height: 100vh;
  h2 {
    display: flex;
    justify-content: center;
    width: 100%;
    margin: 0;
    padding: 0;
    padding: 8% 0;
    color: v.$white;
    font-family: "Lato", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
    font-size: calc(#{$font-size} * 0.85);
    font-weight: 500;
  }
}
$circle-width: 50%;
##{$namespace}-circle {
  position: relative;
  width: $circle-width;
  aspect-ratio: 1/1;
  border-radius: 50%;
  background: v.$corner-gradient;
  & > svg {
    transform: rotate(-7deg) translateX(15%);
    position: absolute;
    width: 20%;
    top: 0;
    right: 0;
  }
  @include v.img-fill;
}
##{$namespace}-social-media {
  padding: 9% 0;
  height: 10%;
  display: flex;
  justify-content: center;
  align-items: center;
  width: $circle-width - 8%;
  min-height: 100%;
  a {
    display: flex;
    padding: 0 7%;
    margin: 0;
    height: 100%;
    width: 100%;
  }
}
##{$namespace}-message {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 50%;
  position: relative;
  padding: 8% 0;
}
##{$namespace}-message-inner {
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 80%;
}
.#{$namespace}-box-line {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  z-index: 0;
}
##{$namespace}-box-email-icon {
  position: absolute;
  top: -6%;
  left: -5%;
  aspect-ratio: 1;
  width: 10%;
  display: flex;
  justify-content: center;
  align-items: center;
  svg {
    background-color: v.$dark-black;
    width: 100%;
    height: 100%;
    color: v.$blue;
  }
}
##{$namespace}-message-form {
  position: relative;
  display: flex;
  flex-direction: column;
  width: 100%;
  input,
  textarea {
    font-size: calc(#{$font-size} * 0.22);
    font-family: "Lato", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
    border: 0.15em solid v.$gray;
    border-radius: 0.3em;
    z-index: 1;
    padding: 2.5% 2%;
    resize: none;
    &::placeholder {
      font-weight: 600;
    }
    &:focus {
      outline: 3px solid v.$yellow;
    }
  }
  textarea {
    margin-top: calc((#{$font-size} / 2.2) / 1.5);
    flex-grow: 1;
  }
  button {
    @include v.remove-btn-default;
    margin-top: calc(#{$font-size} / 2.2);
    font-size: calc(#{$font-size} * 0.23);
    padding: calc(#{$font-size} * 0.15) 0;
    font-weight: 600;
    border-radius: 0.3em;
    color: v.$white;
    font-family: "Lato", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
    background: v.$horizontal-gradient;
    letter-spacing: 0.03em;
    z-index: 1;
  }
}
##{$namespace}-message-urgent {
  position: relative;
  font-weight: 400;
  font-family: "Lato", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
  color: v.$gray;
  text-align: center;
  font-size: calc(#{$font-size} * 0.22);
  line-height: calc(#{$font-size} / 2.5);
  padding-top: calc((#{$font-size} / 2.2) - 0.7vw);
  margin-top: calc((#{$font-size} / 2.2) + 0.3vw);
  align-self: end;
  align-self: flex-end;
  &:after {
    $width: 45%;
    @include v.abs-pos-fill;
    height: 1px;
    background-color: v.$gray;
    left: math.div(100% - $width, 2);
    width: $width;
  }
}

